tekton/5-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-trigger-ref-listener
  namespace: namespace-creator
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-trigger-ref-listener
    weight: 100
  wildcardPolicy: None
